--- a/tcm/modules/web/src/main/webapp/pages/custody/td/index.xhtml
+++ b/tcm/modules/web/src/main/webapp/pages/custody/td/index.xhtml
@@ -101,8 +101,8 @@
                                 </p:tab>
                             </p:accordionPanel>
                         </p:panel>
-                        <div class="Container100">
-                            <p:button value="Save and Open Account" styleClass="Fright">
+                        <div class="Container100" style="text-align: center;">
+                            <p:button value="Save and Open Account" styleClass="">
                                 <f:param name="AccountOpenSave" />
                             </p:button>
                         </div>
