Committing TCM Project- Prakash Lal

--- a/tcm/modules/web/src/main/webapp/pages/custody/td/beneficiary.xhtml
+++ b/tcm/modules/web/src/main/webapp/pages/custody/td/beneficiary.xhtml
@@ -98,6 +98,7 @@
 
 					<div class="EmptyBox30"></div>
 					<div class="Container80 BeneficiaryEditPanel">
+                        <div class="ContainerIndent">
 						<div class="Container100">
 							<label Class="Container60"
 								   style="text-align: left !important; font-weight: bold !important;">Name</label>
@@ -174,13 +175,13 @@
 							</div>
 						</div>
 
-							<div class="Container32 CustomWidthFA2-Responsive">
+							<div class="Container32 CustomWidthFA2">
 								<label Class="Container100"
 									   style="text-align: left !important; font-weight: bold !important;">Per
 									Stirpes</label>
 								<div class="EmptyBox5"></div>
 								<div class="Container100 Fleft">
-									<div style="margin-top: 10px;">
+									<div style="margin-top: 15px;">
 										<p:selectBooleanCheckbox styleClass="benCheckBox" value="#{tdcto.tdMasterData.benefiaciaryDetailses.perStripes}" itemLabel="Per Stirpes">
 										</p:selectBooleanCheckbox>
 									</div>
@@ -188,7 +189,7 @@
 
 							</div>
 
-							<div class="Container32 CustomWidthFA2-Responsive">
+							<div class="Container32 CustomWidthFA2">
 								<label Class="Container100"
 									   style="text-align: left !important; font-weight: bold !important;">Share
 									%</label>
@@ -214,7 +215,7 @@
 						</div>
 							<div class="EmptyBox5"></div>
                     </div>
-
+</div>
             </p:panel>
 			<div class="Container100 MarTop20" style="margin: 10px 10px;">
 					<p:commandLink styleClass="UI-prevButtonFA Fleft"
