--- a/tcm/modules/web/src/main/webapp/pages/custody/td/beneficiary.xhtml
+++ b/tcm/modules/web/src/main/webapp/pages/custody/td/beneficiary.xhtml
@@ -1,9 +1,9 @@
 <ui:composition xmlns="http://www.w3.org/1999/xhtml"
-				xmlns:h="http://java.sun.com/jsf/html"
-				xmlns:f="http://java.sun.com/jsf/core"
-				xmlns:ui="http://java.sun.com/jsf/facelets"
-				xmlns:p="http://primefaces.org/ui"
-				xmlns:pe="http://primefaces.org/ui/extensions">
+	xmlns:h="http://java.sun.com/jsf/html"
+	xmlns:f="http://java.sun.com/jsf/core"
+	xmlns:ui="http://java.sun.com/jsf/facelets"
+	xmlns:p="http://primefaces.org/ui"
+	xmlns:pe="http://primefaces.org/ui/extensions">
 
 	<f:metadata>
 		<f:viewParam name="acct" value="#{ctobean.beanAcctnum}" />
@@ -11,110 +11,107 @@
 	</f:metadata>
 
 
-		<p:panel id="beneficiaryPanel"
-				 style="border: 0px; background: transparent" closable="true"
-				 toggleable="true">
-			<div class="EmptyBox20"></div>
-			<div class="Container80 Responsive100 MarTop5 MarCenter ui-color"
-				 style="margin-bottom: 15px;">
+	<p:panel id="beneficiaryPanel"
+		style="border: 0px; background: transparent" closable="true"
+		toggleable="true">
 
-				<!--
-				<div class="beneficiaryAdd Container90">
-					<i class="fa fa-plus-square"></i>
-					<h:outputText styleClass="Wid100 labelBAB" value="Add Beneficiary" />
-				</div>
-				 -->
-				<div class="beneficiaryAdd Container100">
-					<p:selectBooleanButton id="addButton" onLabel="+" offLabel="+"
-										   value="#{tdcto.tdMasterData.addBeneficiary}">
+		<div class="Container80 Responsive100 MarTop5 MarCenter ui-color"
+			style="margin-bottom: 15px;">
 
-						<p:ajax update=":ctoForm:tdaccordian:beneficiaryPanel" />
-					</p:selectBooleanButton>
-					<h:outputText style="color:black;" value="Add Beneficiary" />
+			<p:selectBooleanButton styleClass="AddBeneficiaryButton" id="addButton" onLabel="Add Beneficiary"
+				offLabel="Add Beneficiary" onIcon="ui-icon-minus"
+				offIcon="ui-icon-plus" value="#{tdcto.tdMasterData.addBeneficiary}"
+				style="MarTop5">
 
-				</div>
+				<p:ajax update=":ctoForm:tdaccordian:beneficiaryPanel" />
+			</p:selectBooleanButton>
 
-				<div class="Container100 Responsive100">
-					<div class="ContainerIndent">
-						<div class="Container100 MarginBottom">
-							<p:growl id="beneGrowl" autoUpdate="true" escape="false"/>
-							<p:dataTable id="singleDT" var="investment"
-										 value="#{tcmdash.manageAccountList}"
-										 emptyMessage="No beneficiary account added. Add a new beneficiary account"
-										 reflow="true">
 
-								<p:column styleClass="Wid25 TexAlCenter ZeroPaddingBottom">
-									<p:commandButton id="activeButton"
-													 rendered="#{investment.managed}" styleClass="Fs14 GreenButton"
-													 process="@this" immediate="true"
-													 icon="fa fa-search-plus Fs14 white"
-													 action="#{tcmdash.doSelectedAction}">
-										<p:tooltip id="activeToolTipFade" for="activeButton"
-												   value="View" />
-										<f:setPropertyActionListener value="#{investment}"
-																	 target="#{tcmdash.selectedAccount}" />
-									</p:commandButton>
-									<p:commandButton id="pendingButton"
-													 rendered="#{! investment.managed}"
-													 styleClass="Fs14 BlueButton" process="@this" immediate="true"
-													 icon="fa fa-pencil-square-o Fs14 white"
-													 action="#{tcmdash.doSelectedAction}">
-										<p:tooltip id="pendingToolTipFade" for="pendingButton"
-												   value="Edit" />
-										<f:setPropertyActionListener value="#{investment}"
-																	 target="#{tcmdash.selectedAccount}" />
-									</p:commandButton>
-								</p:column>
+			<div class="Container100 Responsive100">
+				<div class="ContainerIndent">
+					<div class="Container100 MarginBottom">
+						<p:growl id="beneGrowl" autoUpdate="true" escape="false" />
+						<p:dataTable id="singleDT" var="investment"
+							value="#{tcmdash.manageAccountList}"
+							emptyMessage="No beneficiary account added. Add a new beneficiary account"
+							reflow="true">
 
-								<p:column styleClass="Wid25 TexAlLeft" sortBy=""
-										  headerText="First Name" priority="3" resizable="true">
-									<span class="dashboardUsrColumnFloatRight"> <h:outputText
-											value="" /></span>
-								</p:column>
+							<p:column styleClass="Wid25 TexAlCenter ZeroPaddingBottom">
+								<p:commandButton id="activeButton"
+									rendered="#{investment.managed}" styleClass="Fs14 GreenButton"
+									process="@this" immediate="true"
+									icon="fa fa-search-plus Fs14 white"
+									action="#{tcmdash.doSelectedAction}">
+									<p:tooltip id="activeToolTipFade" for="activeButton"
+										value="View" />
+									<f:setPropertyActionListener value="#{investment}"
+										target="#{tcmdash.selectedAccount}" />
+								</p:commandButton>
+								<p:commandButton id="pendingButton"
+									rendered="#{! investment.managed}" styleClass="Fs14 BlueButton"
+									process="@this" immediate="true"
+									icon="fa fa-pencil-square-o Fs14 white"
+									action="#{tcmdash.doSelectedAction}">
+									<p:tooltip id="pendingToolTipFade" for="pendingButton"
+										value="Edit" />
+									<f:setPropertyActionListener value="#{investment}"
+										target="#{tcmdash.selectedAccount}" />
+								</p:commandButton>
+							</p:column>
 
-								<p:column styleClass="Wid25 TexAlLeft" sortBy=""
-										  headerText="Last Name" resizable="true">
-									<span class="dashboardUsrColumnFloatRight"> <h:outputText
-											value="" /></span>
-								</p:column>
+							<p:column styleClass="Wid25 TexAlLeft" sortBy=""
+								headerText="First Name" priority="3" resizable="true">
+								<span class="dashboardUsrColumnFloatRight"> <h:outputText
+										value="" /></span>
+							</p:column>
 
-								<p:column styleClass="Wid25 num-text-align invest"
-										  headerText="Share %" resizable="true">
-									<span class="dashboardUsrColumnFloatRight"><h:outputText
-											value="">
+							<p:column styleClass="Wid25 TexAlLeft" sortBy=""
+								headerText="Last Name" resizable="true">
+								<span class="dashboardUsrColumnFloatRight"> <h:outputText
+										value="" /></span>
+							</p:column>
+
+							<p:column styleClass="Wid25 num-text-align invest"
+								headerText="Share %" resizable="true">
+								<span class="dashboardUsrColumnFloatRight"><h:outputText
+										value="">
 										<f:convertNumber type="percent" />
 									</h:outputText></span>
 
-								</p:column>
+							</p:column>
 
-							</p:dataTable>
+						</p:dataTable>
 
-						</div>
 					</div>
 				</div>
-				<p:panel id="beneficiaryAdd"
-						 style="border: 0px; background: transparent; margin-top: -10px;"
-						 rendered="#{tdcto.tdMasterData.addBeneficiary}">
+			</div>
+			<p:panel id="beneficiaryAdd"
+				style="border: 0px; background: transparent; margin-top: -10px;"
+				rendered="#{tdcto.tdMasterData.addBeneficiary}">
 
-					<div class="EmptyBox30"></div>
-					<div class="Container80 BeneficiaryEditPanel">
-                        <div class="ContainerIndent">
+				<div class="EmptyBox30"></div>
+				<div class="Container80 BeneficiaryEditPanel">
+					<div class="ContainerIndent">
+					<div class="closeAddBeneficiary Fright">
+					<i class="fa fa-times" aria-hidden="true"></i>
+					</div>
 						<div class="Container100">
 							<label Class="Container60"
-								   style="text-align: left !important; font-weight: bold !important;">Name</label>
+								style="text-align: left !important; font-weight: bold !important;">Name</label>
 
 							<div class="EmptyBox5"></div>
 							<p:inputText styleClass="CustomWidthFA FS14 InputMergeRight"
-										 placeholder="First Name"
-										 value="#{tdcto.tdMasterData.benefiaciaryDetailses.beneFirstName}">
+								placeholder="First Name"
+								value="#{tdcto.tdMasterData.benefiaciaryDetailses.beneFirstName}">
 							</p:inputText>
-							<p:inputText styleClass="MiddleInitialWidth FS14 InputMergeLeft InputMergeRight"
-										 placeholder="Middle Initial"
-										 value="#{tdcto.tdMasterData.benefiaciaryDetailses.beneMidInitial}">
+							<p:inputText
+								styleClass="MiddleInitialWidth FS14 InputMergeLeft InputMergeRight"
+								placeholder="Middle Initial"
+								value="#{tdcto.tdMasterData.benefiaciaryDetailses.beneMidInitial}">
 							</p:inputText>
 							<p:inputText styleClass="CustomWidthFA FS14 InputMergeLeft"
-										 placeholder="Last Name"
-										 value="#{tdcto.tdMasterData.benefiaciaryDetailses.beneLastName}">
+								placeholder="Last Name"
+								value="#{tdcto.tdMasterData.benefiaciaryDetailses.beneLastName}">
 							</p:inputText>
 						</div>
 
@@ -122,67 +119,69 @@
 						<div class="Container100">
 							<div class="Container32 Fleft CustomWidthFA-Responsive">
 								<label Class="Container100"
-									   style="text-align: left !important; font-weight: bold !important;">Birthdate</label>
+									style="text-align: left !important; font-weight: bold !important;">Birthdate</label>
 
 								<div class="EmptyBox5"></div>
 								<p:inputMask styleClass="Wid85 FS14 CustomWidthFA-Responsive"
-											 value="#{tdcto.tdMasterData.benefiaciaryDetailses.beneDOB}"
-											 mask="99/99/9999" placeholder="MM/DD/YYYY">
+									value="#{tdcto.tdMasterData.benefiaciaryDetailses.beneDOB}"
+									mask="99/99/9999" placeholder="MM/DD/YYYY">
 								</p:inputMask>
 							</div>
 
-							<div
-									class="Container32 CustomWidthFA-Responsive">
+							<div class="Container32 CustomWidthFA-Responsive">
 								<label Class="Container100"
-									   style="text-align: left !important; font-weight: bold !important;">Social
+									style="text-align: left !important; font-weight: bold !important;">Social
 									Security Number</label>
 
 								<div class="EmptyBox5"></div>
 								<p:inputMask styleClass="Wid85 FS14 CustomWidthFA-Responsive"
-											 value="#{tdcto.tdMasterData.benefiaciaryDetailses.beneSSN}"
-											 mask="999-99-9999" placeholder="###-##-####" required="false">
+									value="#{tdcto.tdMasterData.benefiaciaryDetailses.beneSSN}"
+									mask="999-99-9999" placeholder="###-##-####" required="false">
 								</p:inputMask>
 							</div>
 
 
 							<div class="Container32 CustomWidthFA-Responsive">
 								<label Class="Container100"
-									   style="text-align: left !important; font-weight: bold !important;">Relationship</label>
+									style="text-align: left !important; font-weight: bold !important;">Relationship</label>
 
 								<div class="EmptyBox5"></div>
 								<p:inputText styleClass="Wid85 CustomWidthFA2 FS14 Mar5"
-											 placeholder="Relationship"
-											 value="#{tdcto.tdMasterData.benefiaciaryDetailses.beneRel}">
+									placeholder="Relationship"
+									value="#{tdcto.tdMasterData.benefiaciaryDetailses.beneRel}">
 								</p:inputText>
 							</div>
-</div>
-			<div class="EmptyBox20"></div>
-			<div class="Container100">
+						</div>
+						<div class="EmptyBox20"></div>
+						<div class="Container100">
 							<div class="Container32 Fleft CustomWidthFA2 MarTop5">
 								<label Class="Container100"
-									   style="text-align: left !important; font-weight: bold !important;">Type
+									style="text-align: left !important; font-weight: bold !important;">Type
 									of Beneficiary</label>
 
 								<div class="EmptyBox5"></div>
 								<div class="Container100 Fleft">
-								<div class="CustomWidthFA-Responsive InlineCitizenRadioBtn"
-									 style="margin-top: 5px;">
-									<p:selectOneRadio styleClass="textAlign formRadioBtn" value="#{tdcto.tdMasterData.benefiaciaryDetailses.typeOfBeneficiary}">
-										<f:selectItem itemValue="1" itemLabel="Primary" />
-										<f:selectItem itemValue="2" itemLabel="Contigent" />
-									</p:selectOneRadio>
+									<div class="CustomWidthFA-Responsive InlineCitizenRadioBtn"
+										style="margin-top: 5px;">
+										<p:selectOneRadio styleClass="textAlign formRadioBtn"
+											value="#{tdcto.tdMasterData.benefiaciaryDetailses.typeOfBeneficiary}">
+											<f:selectItem itemValue="1" itemLabel="Primary" />
+											<f:selectItem itemValue="2" itemLabel="Contigent" />
+										</p:selectOneRadio>
+									</div>
 								</div>
 							</div>
-						</div>
 
 							<div class="Container32 CustomWidthFA2">
 								<label Class="Container100"
-									   style="text-align: left !important; font-weight: bold !important;">Per
+									style="text-align: left !important; font-weight: bold !important;">Per
 									Stirpes</label>
 								<div class="EmptyBox5"></div>
 								<div class="Container100 Fleft">
 									<div style="margin-top: 15px;">
-										<p:selectBooleanCheckbox styleClass="benCheckBox" value="#{tdcto.tdMasterData.benefiaciaryDetailses.perStripes}" itemLabel="Per Stirpes">
+										<p:selectBooleanCheckbox styleClass="benCheckBox"
+											value="#{tdcto.tdMasterData.benefiaciaryDetailses.perStripes}"
+											itemLabel="Per Stirpes">
 										</p:selectBooleanCheckbox>
 									</div>
 								</div>
@@ -191,40 +190,43 @@
 
 							<div class="Container32 CustomWidthFA2">
 								<label Class="Container100"
-									   style="text-align: left !important; font-weight: bold !important;">Share
+									style="text-align: left !important; font-weight: bold !important;">Share
 									%</label>
 
 								<div class="EmptyBox5"></div>
 								<p:inputText styleClass="Wid85 CustomWidthFA2 FS14 Mar5"
-											 placeholder="Share %"
-											 value="#{tdcto.tdMasterData.benefiaciaryDetailses.sharePerc}">
+									placeholder="Share %"
+									value="#{tdcto.tdMasterData.benefiaciaryDetailses.sharePerc}">
 								</p:inputText>
 							</div>
-                           </div>
+						</div>
 
 						<div class="EmptyBox20"></div>
 						<div class="Container100 BenBttonBlock"
-							 style="text-align: center;">
-							<p:button styleClass="CommonBtnWidthCancel" value="Cancel">
-								<f:param name="Cancel" />
+							style="text-align: center;">
+							<p:button styleClass="CommonBtnWidthCancel" value="Reset">
+								<f:param name="Reset" />
 							</p:button>
 
-							<p:commandButton value="Save" ajax="true" update=":ctoForm:tdaccordian:beneficiaryPanel" actionListener="#{tdcto.tdMasterData.addTempBeneficiary}" styleClass="ui-priority-primary CommonBtnWidthSave" />
+							<p:commandButton value="Save" ajax="true"
+								update=":ctoForm:tdaccordian:beneficiaryPanel"
+								actionListener="#{tdcto.tdMasterData.addTempBeneficiary}"
+								styleClass="ui-priority-primary CommonBtnWidthSave" />
 
 
 						</div>
-							<div class="EmptyBox5"></div>
-                    </div>
-</div>
-            </p:panel>
-			<div class="Container100 MarTop20" style="margin: 10px 10px;">
-					<p:commandLink styleClass="UI-prevButtonFA Fleft"
-								   actionListener="#{tdcto.prevPage}" update="@form" />
-
-					<p:commandLink styleClass="UI-nextButtonFA Fright UI-tcmButton"
-								   actionListener="#{tdcto.nextPage}" update="@form" />
+						<div class="EmptyBox5"></div>
+					</div>
 				</div>
-            </div>
+			</p:panel>
+			<div class="Container100 MarTop20" style="margin: 10px 10px;">
+				<p:commandLink styleClass="UI-prevButtonFA Fleft"
+					actionListener="#{tdcto.prevPage}" update="@form" />
 
-</p:panel>
+				<p:commandLink styleClass="UI-nextButtonFA Fright UI-tcmButton"
+					actionListener="#{tdcto.nextPage}" update="@form" />
+			</div>
+		</div>
+
+	</p:panel>
 </ui:composition>
