Beneficiary Code Commit

--- a/tcm/modules/web/src/main/webapp/pages/custody/td/beneficiary.xhtml
+++ b/tcm/modules/web/src/main/webapp/pages/custody/td/beneficiary.xhtml
@@ -20,7 +20,8 @@
 
 			<p:selectBooleanButton styleClass="AddBeneficiaryButton" id="addButton" onLabel="Add Beneficiary"
 				offLabel="Add Beneficiary" onIcon="ui-icon-minus"
-				offIcon="ui-icon-plus" value="#{tdcto.tdMasterData.addBeneficiary}">
+				offIcon="ui-icon-plus" value="#{tdcto.tdMasterData.addBeneficiary}"
+				>
 
 				<p:ajax update=":ctoForm:tdaccordian:beneficiaryPanel" />
 			</p:selectBooleanButton>
@@ -31,50 +32,58 @@
 					<div class="Container100 MarginBottom">
 						<p:growl id="beneGrowl" autoUpdate="true" escape="false" />
 						<p:dataTable id="singleDT" var="investment"
-							value="#{tcmdash.manageAccountList}"
+							value="#{tdcto.beneTempList}"
 							emptyMessage="No beneficiary account added. Add a new beneficiary account"
 							reflow="true">
 
 							<p:column styleClass="Wid25 TexAlCenter ZeroPaddingBottom">
 								<p:commandButton id="activeButton"
-									rendered="#{investment.managed}" styleClass="Fs14 GreenButton"
+									rendered="#{!investment.managed}" styleClass="Fs14 GreenButton"
 									process="@this" immediate="true"
 									icon="fa fa-search-plus Fs14 white"
-									action="#{tcmdash.doSelectedAction}">
+									action="#{tdcto.doSelectedAction}">
 									<p:tooltip id="activeToolTipFade" for="activeButton"
 										value="View" />
 									<f:setPropertyActionListener value="#{investment}"
-										target="#{tcmdash.selectedAccount}" />
+										target="#{tdcto.selectedAccount}" />
 								</p:commandButton>
 								<p:commandButton id="pendingButton"
-									rendered="#{! investment.managed}" styleClass="Fs14 BlueButton"
+									rendered="#{investment.managed}" styleClass="Fs14 BlueButton"
 									process="@this" immediate="true"
 									icon="fa fa-pencil-square-o Fs14 white"
-									action="#{tcmdash.doSelectedAction}">
+									ajax="true" update=":ctoForm:tdaccordian:beneficiaryAdd" actionListener="#{tdcto.editTempBeneficiary(investment.beneId)}">
 									<p:tooltip id="pendingToolTipFade" for="pendingButton"
 										value="Edit" />
 									<f:setPropertyActionListener value="#{investment}"
-										target="#{tcmdash.selectedAccount}" />
+										target="#{tdcto.selectedAccount}" />
+								</p:commandButton>
+								<p:commandButton id="menuDelete" rendered="#{investment.managed}"
+												 styleClass="Fs16 RedButton DualBtnModeRight"
+												 process="@this" immediate="true"
+												 icon="fa fa-trash Fs14 white"
+												 actionListener="#{tdcto.tdMasterData.benefiaciaryDetailses.doSelectedAction}"
+												 update="singleDT">
+									<p:confirm header="Delete This Account" message="Are you sure?" icon="ui-icon-alert"/>
 								</p:commandButton>
 							</p:column>
 
 							<p:column styleClass="Wid25 TexAlLeft" sortBy=""
 								headerText="First Name" priority="3" resizable="true">
 								<span class="dashboardUsrColumnFloatRight"> <h:outputText
-										value="" /></span>
+										value="#{investment.beneFirstName}" /></span>
 							</p:column>
 
 							<p:column styleClass="Wid25 TexAlLeft" sortBy=""
 								headerText="Last Name" resizable="true">
 								<span class="dashboardUsrColumnFloatRight"> <h:outputText
-										value="" /></span>
+										value="#{investment.beneLastName}" /></span>
 							</p:column>
 
 							<p:column styleClass="Wid25 num-text-align invest"
 								headerText="Share %" resizable="true">
 								<span class="dashboardUsrColumnFloatRight"><h:outputText
-										value="">
-										<f:convertNumber type="percent" />
+										value="#{investment.sharePerc}">
+										<!--<f:convertNumber type="percent" />-->
 									</h:outputText></span>
 
 							</p:column>
@@ -209,7 +218,7 @@
 
 							<p:commandButton value="Save" ajax="true"
 								update=":ctoForm:tdaccordian:beneficiaryPanel"
-								actionListener="#{tdcto.tdMasterData.addTempBeneficiary}"
+								actionListener="#{tdcto.addTempBeneficiary}"
 								styleClass="ui-priority-primary CommonBtnWidthSave" />
 
 
